# code-skills

./: .gitignore  LICENSE  README.md  pyproject.toml
skills/workflow-advisor/: HANDOVER.md  README.md  SKILL.md  pyproject.toml
skills/workflow-advisor/agents/: openai.yaml
skills/workflow-advisor/references/: bootstrap.md  cascade.md  config-schema.yml  interview.md  metrics.md  reconcile.md  reconfigure.md
skills/workflow-advisor/references/examples/: bootstrap-walkthrough.md  event-trace.md  reconcile-pass.md
skills/workflow-advisor/references/playbooks/: _dispatch.md  artifact_state_changed.md  comment.slash_command.md  comments.md  in_flight_conflict.md  issues.md  labels_changed.md  operational.md  pull_request.closed.md  pull_request.merged.md  pull_request.opened.md  pull_request.ready_for_review.md  pull_request.synchronized.md  push.md  push.protected_branch.md  release.md  release.rollback.md  release.validation.md  review.submitted.md  schedule.daily.md  schedule.weekly.md  spec_change.md  status.md
skills/workflow-advisor/references/profiles/: accessibility.md  compliance.md  composition.md  documentation.md  observability.md  security.md  spec-driven.md  testability.md
skills/workflow-advisor/scripts/: __init__.py  cli.py
skills/workflow-advisor/tests/: bootstrap_smoke.py  cascade_dependents_smoke.py  checkpoint_smoke.py  cli_matrix.sh  config_validation_smoke.py  lifecycle_gates_smoke.py  package_smoke.sh  poll_smoke.py  provider_actions_smoke.py  reconcile_paths_smoke.py  report_smoke.py  smoke.sh  state_io_smoke.py  templates_smoke.py
(+162 files in other folders)
